# analise_educacation_chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
agents/: Dockerfile  pyproject.toml
agents/evaluation/: __init__.py  conftest.py
agents/evaluation/golden/: README.md  adversarial.yaml  queries_comparativas.yaml  queries_factuais.yaml
agents/evaluation/golden/per_agent/: .gitkeep
agents/evaluation/metrics/: __init__.py  doi_validity.py  guardrails_efficacy.py  hallucination_classifier.py  llm_judge.py  llm_judge_batch.py  numeric_accuracy.py  refusal_patterns.py  source_coverage.py
agents/evaluation/reports/: __init__.py  external_evaluator_form.py  generate_paper_table.py  render_baseline_comparison_figure.py  statistical_analysis.py
agents/evaluation/runners/: __init__.py  run_baseline.py  run_eduquery.py  run_llm_direct.py  run_red_team.py
agents/evaluation/shared/: __init__.py  cache.py  classify_bloom.py  extend_adversarial_schema.py  import_external_eval.py  loader.py  mark_verified.py  parser.py  recalibrate_tolerances.py  reclassify_adversarials.py  reconstruct_from_log.py  rerun_failed.py  runner.py  verify_in_scope_goldens.py
agents/src/: api_client.py  cli.py  config.py  llm.py  logging_config.py  schemas.py
agents/src/agents/: __init__.py  _builder.py  _prompt_loader.py  citation.py  comparativist.py  orchestrator.py  profiler.py  retriever.py  statistician.py  synthesizer.py  visualizer.py
agents/src/crews/: __init__.py  _helpers.py  analysis_crew.py  core_crew.py  master_flow.py  synthesis_crew.py
agents/src/prompts/: citation_system.txt  comparativist_system.txt  orchestrator_system.txt  profiler_system.txt  retriever_system.txt  statistician_system.txt  synthesizer_system.txt  visualizer_system.txt
agents/src/rag/: __init__.py  client.py  ingest.py  search.py
agents/src/rag/seeds/: manifest.yaml
agents/src/server/: __init__.py  chat_stream.py  main.py  schemas.py
agents/src/tools/: __init__.py  _base.py  data_tools.py  rag_tools.py  stats_tools.py  viz_tools.py
agents/tests/: conftest.py  test_api_client.py  test_cli.py  test_config.py  test_llm.py
agents/tests/agents/: test_adversarial_corrections.py  test_analysis_crew.py  test_citation.py  test_fact_check.py  test_master_flow.py  test_orchestrator_profiler.py  test_retriever.py  test_statistician_comparativist.py  test_visualizer_synthesizer.py
agents/tests/e2e/: test_master_flow_live.py
agents/tests/evaluation/: conftest.py  test_cache.py  test_classify_adversarial.py  test_doi_validity.py  test_external_eval.py  test_generate_paper_table.py  test_guardrails_efficacy.py  test_hallucination_classifier.py  test_loader.py  test_numeric_accuracy.py  test_parser.py  test_refusal_patterns.py  test_runner_helpers.py  test_source_coverage.py  test_statistical_analysis.py
agents/tests/rag/: test_rag_client_search.py
agents/tests/server/: test_chat_stream.py
agents/tests/tools/: test_data_tools.py  test_doi_validator.py  test_rag_tools.py  test_stats_tools.py  test_viz_tools.py
api/: Dockerfile  pyproject.toml
api/src/: __init__.py  config.py  main.py
api/src/dependencies/: duckdb.py  ratelimit.py  request_id.py  response.py
api/src/routers/: data.py  health.py
api/src/schemas/: catalog.py  common.py  compare.py  ranking.py  timeseries.py
api/src/services/: catalog_service.py  compare_service.py  ranking_service.py  timeseries_service.py
api/tests/: conftest.py  test_health.py
api/tests/routers/: test_data_catalog.py  test_data_compare.py  test_data_ranking.py  test_data_timeseries.py
data_pipeline/: Dockerfile  pyproject.toml
data_pipeline/src/: __init__.py  config.py  logging_config.py
data_pipeline/src/collectors/: base.py
data_pipeline/src/collectors/cepalstat/: __init__.py  api_client.py
data_pipeline/src/collectors/eurostat/: __init__.py  jsonstat_client.py
data_pipeline/src/collectors/ibge/: sidra_educacao.py
data_pipeline/src/collectors/inep/: __init__.py  censo_escolar.py  ideb.py  inep_base.py
data_pipeline/src/collectors/ipea/: __init__.py  odata_client.py
data_pipeline/src/collectors/oecd/: __init__.py  sdmx_client.py
data_pipeline/src/collectors/unesco/: __init__.py  uis_client.py  uis_rest_client.py
data_pipeline/src/collectors/worldbank/: api_client.py
data_pipeline/src/flows/: cepalstat.py  eurostat.py  ibge_sidra.py  inep.py  ipea.py  oecd.py  unesco.py  worldbank.py
data_pipeline/src/scripts/: __init__.py  collect_ideb.py
data_pipeline/src/utils/: bronze.py  bulk_downloader.py  ingestion_log.py  period.py  sdmx_json.py
data_pipeline/tests/: conftest.py
data_pipeline/tests/collectors/cepalstat/: test_api_client.py
data_pipeline/tests/collectors/eurostat/: test_jsonstat_client.py
data_pipeline/tests/collectors/ibge/: test_sidra_educacao.py
data_pipeline/tests/collectors/inep/: test_censo_escolar.py  test_ideb.py  test_inep_base.py
data_pipeline/tests/collectors/ipea/: test_odata_client.py
data_pipeline/tests/collectors/oecd/: test_sdmx_client.py
data_pipeline/tests/collectors/unesco/: test_uis_client.py  test_uis_rest_client.py
data_pipeline/tests/collectors/worldbank/: test_api_client.py
data_pipeline/tests/flows/: test_cepalstat.py  test_eurostat.py  test_ibge_sidra.py  test_ipea.py  test_oecd.py  test_unesco.py
data_pipeline/tests/quality/: test_silver_gold_expectations.py
data_pipeline/tests/scripts/: test_collect_ideb.py
data_pipeline/tests/utils/: test_bronze.py  test_bulk_downloader.py  test_ingestion_log.py  test_sdmx_json.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: harmonize_country.sql  safe_to_year.sql
dbt_project/seeds/: ibge_ufs.csv  isced_2011.csv  iso_3166_paises.csv  schema.yml
docs/: conventions.md  methodology.md  quality-assessment-2026-05-14.md
docs/architecture/: README.md  (+7 more)
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
r_scripts/: README.md  _packages.R  pirls_extraction.R  pisa_extraction.R  timss_extraction.R
(+154 files in other folders)
