[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-agents"
version = "0.1.0"
description = "Sistema multi-agente CrewAI para análise educacional comparada"
requires-python = ">=3.11"
authors = [
    { name = "Tharsys Ribeiro", email = "tharsyssribeiro@gmail.com" }
]
dependencies = [
    "crewai>=0.80",
    "anthropic>=0.34",
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
