[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-agents"
version = "0.1.0"
description = "Sistema multi-agente CrewAI para análise educacional comparada"
requires-python = ">=3.11"
authors = [
    { name = "Tharsys Ribeiro", email = "tharsyssribeiro@gmail.com" }
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
# Stack pesado dos agentes — instalavel sob demanda nas Sprints 5.1+.
# Sprint 5.0 fica leve para CI/test de scaffold.
agents = [
    "crewai>=0.80",
    "anthropic>=0.34",
    "langchain-anthropic>=0.2",
    # Mini API server para o endpoint /api/chat/stream (Sprint 6.1).
    # uvicorn ja vem como transitivo de crewai.
    "fastapi>=0.110",
]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
    "pyyaml>=6.0",
]
dev = [
    "ruff>=0.3",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # CrewAI 1.14 emite DeprecationWarning interno via Pydantic field "deprecated".
    "ignore::DeprecationWarning:crewai.*",
    "ignore::DeprecationWarning:pydantic.*",
    # ChromaDB 1.1 ja deprecates EmbeddingFunction sem name()/get_config()
    # — nosso StubEmbedding implementa name() mas ainda nao get_config().
    "ignore::DeprecationWarning:chromadb.*",
    # structlog: warning quando exception chain e usada com ConsoleRenderer
    # mas mantemos format_exc_info pois eh necessario p/ JSONRenderer (prod).
    "ignore:Remove `format_exc_info`:UserWarning:structlog.*",
]
