[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-agents"
version = "0.1.0"
description = "Sistema multi-agente CrewAI para análise educacional comparada"
requires-python = ">=3.11"
authors = [
    { name = "Anonymous (double-blind review)" }
]
dependencies = [
    "crewai[google-genai]>=1.14.5",
    "httpx>=0.27",
    "litellm>=1.85.0",
    "matplotlib>=3.10.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "scipy>=1.17.1",
    "structlog>=24.1",
]

[project.optional-dependencies]
# Stack pesado dos agentes — instalavel sob demanda nas Sprints 5.1+.
# Sprint 5.0 fica leve para CI/test de scaffold.
#
# LLM provider-agnostico: CrewAI usa LiteLLM internamente, que ja fala com
# Anthropic, OpenAI, Gemini, Groq, OpenRouter e Ollama. As SDKs nativas sao
# opcionais — instale `[agents-<provider>]` apenas se for usar esse provider.
agents = [
    "crewai>=0.80",
    # Mini API server para o endpoint /api/chat/stream (Sprint 6.1).
    # uvicorn ja vem como transitivo de crewai.
    "fastapi>=0.110",
]
# Default historico do projeto: Anthropic Claude.
agents-anthropic = [
    "anthropic>=0.34",
    "langchain-anthropic>=0.2",
]
agents-openai = [
    "openai>=1.40",
]
agents-gemini = [
    "google-generativeai>=0.7",
]
# Ollama nao precisa de SDK extra — LiteLLM fala HTTP direto.
agents-ollama = []
# Groq e OpenRouter usam o SDK da OpenAI sob o capo.
agents-groq = [
    "openai>=1.40",
]
agents-openrouter = [
    "openai>=1.40",
]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
    "pyyaml>=6.0",
]
dev = [
    "ruff>=0.3",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "evaluation*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # CrewAI 1.14 emite DeprecationWarning interno via Pydantic field "deprecated".
    "ignore::DeprecationWarning:crewai.*",
    "ignore::DeprecationWarning:pydantic.*",
    # ChromaDB 1.1 ja deprecates EmbeddingFunction sem name()/get_config()
    # — nosso StubEmbedding implementa name() mas ainda nao get_config().
    "ignore::DeprecationWarning:chromadb.*",
    # structlog: warning quando exception chain e usada com ConsoleRenderer
    # mas mantemos format_exc_info pois eh necessario p/ JSONRenderer (prod).
    "ignore:Remove `format_exc_info`:UserWarning:structlog.*",
]
