[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-api"
version = "0.1.0"
description = "FastAPI gateway para o sistema de análise comparada BR × Internacional em educação"
requires-python = ">=3.11"
authors = [
    { name = "Tharsys Ribeiro", email = "tharsyssribeiro@gmail.com" }
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "slowapi>=0.1.9",
    "structlog>=24.1",
    "httpx>=0.27",
    "duckdb>=1.0",
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
