[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-data-pipeline"
version = "0.1.0"
description = "Coletores e flows Prefect para ingestão de bases educacionais (Camada Bronze)"
requires-python = ">=3.11"
authors = [
    { name = "Tharsys Ribeiro", email = "tharsyssribeiro@gmail.com" }
]
dependencies = [
    "prefect>=3.0",
    "httpx>=0.27",
    "requests>=2.31",
    "pandas>=2.2",
    "polars>=0.20",
    "pyarrow>=15.0",
    "pyreadstat>=1.2",
    "duckdb>=1.0",
    "sidrapy>=0.1.4",
    "ipeadatapy>=0.1.9",
    "wbdata>=1.0",
    "openpyxl>=3.1",
    "structlog>=24.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: testes que tocam APIs externas (rede). Requerem -m integration para rodar.",
    "slow: testes lentos (skip por padrão em CI rápido).",
]
